2008-09-18  Ales Hakl  <ales at hakl dot net>

	* src/introspect.c (dfsch_get_stack_trace): get_stack_trace works
	(stack_frame_apply): stack frames are inspectable by user code
	REgister some primitive functions and stack frame type

2008-09-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_apply_impl): native stack frames

2008-08-18  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: removed remnants of old exception mechanism

2008-08-16  Ales Hakl  <ales at hakl dot net>

	* lib/cdebug.c: reworked debugger. Debugger is now selected
	globally and does not show up as condition handler. Also debugger
	contains full REPL.

2008-08-15  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: correct inter-library dependencies 

	* src/repl.c (interactive_repl): Use console library to read input

	* lib/console.c: simple console input functions

2008-08-14  Ales Hakl  <ales at hakl dot net>

	* lib/debug.c: Moved into library

2008-08-10  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: more tests

	* src/debug.c (debug_main): debugger stub

2008-08-02  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (dfsch__conditions_register): interface to
	condition system.

2008-07-31  Ales Hakl  <ales at hakl dot net>

	* src/control.c (throw): throw function 

2008-07-29  Ales Hakl  <ales at hakl dot net>

	* dfsch/magic.h (DFSCH_SCATCH): do not restore restarts and
	handlers on normal return

2008-07-28  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (restart_t): handlers are property of restart,
	not of entry in restart stack.
	low-level routines for handler-bind and restart-bind

	* dfsch/magic.h (DFSCH_RESTORE_RESTARTS): correct name
	Cleaned up dynamic environment relations between handlers and
	restarts (handler needs to see restarts enclosed, but restart
	should only see enclosing handlers).

2008-07-27  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (dfsch__condition_write): Print conditions

2008-07-20  Ales Hakl  <ales at hakl dot net>