@@ -1334,6 +1334,37 @@ extern dfsch_object_t* dfsch_named_lambda(dfsch_object_t* env,
   
 }
 
+dfsch_object_t* dfsch_get_function_name(dfsch_object_t* proc){
+  if (DFSCH_TYPE_OF(proc) != CLOSURE){
+    dfsch_error("Not a function", proc);
+  }
+  return ((closure_t*)proc)->name;
+}
+dfsch_object_t* dfsch_get_function_environment(dfsch_object_t* proc){
+  if (DFSCH_TYPE_OF(proc) != CLOSURE){
+    dfsch_error("Not a function", proc);
+  }
+  return ((closure_t*)proc)->env;
+}
+dfsch_object_t* dfsch_get_function_arguments(dfsch_object_t* proc){
+  if (DFSCH_TYPE_OF(proc) != CLOSURE){
+    dfsch_error("Not a function", proc);
+  }
+  return ((closure_t*)proc)->args;
+}
+dfsch_object_t* dfsch_get_function_code(dfsch_object_t* proc){
+  if (DFSCH_TYPE_OF(proc) != CLOSURE){
+    dfsch_error("Not a function", proc);
+  }
+  return ((closure_t*)proc)->orig_code;
+}
+dfsch_object_t* dfsch_get_function_effective_code(dfsch_object_t* proc){
+  if (DFSCH_TYPE_OF(proc) != CLOSURE){
+    dfsch_error("Not a function", proc);
+  }
+  return ((closure_t*)proc)->code;
+}
+
 // native code
 object_t* dfsch_make_primitive(dfsch_primitive_impl_t prim, void *baton){
   return dfsch_make_primitive_flags(prim, baton, 0);
